--- a/assets/index.html
+++ b/assets/index.html
@@ -15,7 +15,6 @@
                 <p>Inicio bonito</p>
             </div>
             <div class="rightButton">
-                <p>Idiomas</p>
                 <p>Projetos</p>
                 <p>Idiomas</p>
             </div>
@@ -88,11 +87,11 @@
             <div class="inferior">
                 <div class="links">
                     <div class="github">
-                        <a class="button" href="https://github.com/seuusuario" target="_blank"
+                        <a class="button" href="https://github.com/thiagoopg" target="_blank"
                             rel="noopener noreferrer">
                             Github
                         </a>
-                        <a class="button" href="https://github.com/seuusuario" target="_blank"
+                        <a class="button" href="https://www.linkedin.com/in/thiago-adriel-oliveira-de-lima/" target="_blank"
                             rel="noopener noreferrer">
                             Preview
                         </a>
