--- a/assets/index.html
+++ b/assets/index.html
@@ -78,8 +78,7 @@
     <!--O que eu já fiz-->
     <h1 style="text-align: center; margin-bottom: 100px;">Projetos</h1>
     <div class="projetos">
-
-
+        
         <div class="projeto">
             <div class="supeior">
                 <p class="titulo">Financeiro Pessoal</p>
@@ -98,9 +97,12 @@
                         </a>
                     </div>
                     <div class="mostrarMais">
-                        <button class="botao" onclick="expandirProjeto(this)">
-                            Mostrar mais
-                        </button>
+                        <a class="button">
+                            V
+                        </a>
+                        <div class="detalhes">
+                            <p>Esses são os detalhes que serão expandidos.</p>
+                        </div>
                     </div>
                 </div>
                 <div class="linguagensProjeto">
@@ -112,56 +114,6 @@
             </div>
         </div>
     </div>
-
-    <!-- Modal para mostrar detalhes do projeto -->
-    <div id="myModal" class="modal">
-        <div class="modal-content">
-            <span class="close" onclick="fecharModal()">&times;</span>
-            <div class="projeto">
-                <div class="supeior">
-                    <p class="titulo">Financeiro Pessoal</p>
-                    <img class="imagem-do-Projeto" src="./imagem 1.jpg">
-                </div>
-                <div class="inferior">
-                    <div class="links">
-                        <div class="github">
-                            <a class="button" href="https://github.com/thiagoopg" target="_blank"
-                                rel="noopener noreferrer">
-                                Github
-                            </a>
-                            <a class="button" href="https://www.linkedin.com/in/thiago-adriel-oliveira-de-lima/" target="_blank"
-                                rel="noopener noreferrer">
-                                Preview
-                            </a>
-                        </div>
-                        <div class="mostrarMais">
-                            <button class="botao" onclick="expandirProjeto(this)">
-                                Mostrar mais
-                            </button>
-                        </div>
-                    </div>
-                    <div class="linguagensProjeto">
-                        <p class="linguagem">Html</p>
-                        <p class="linguagem">Css</p>
-                        <p class="linguagem">JavaScript</p>
-                        <p class="linguagem">PhP</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <script>
-        function expandirProjeto(button) {
-            var modal = document.getElementById("myModal");
-            modal.style.display = "block";
-        }
-
-        function fecharModal() {
-            var modal = document.getElementById("myModal");
-            modal.style.display = "none";
-        }
-    </script>
 </body>
 
 </html>
